Fixed Sidebar Error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1935,7 +1935,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    */
 
   .sidebar {
-    position: sticky;
+    position: static;
     top: 60px;
     max-height: max-content;
     height: 100%;
